updated spotless formatting